--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>hello, world</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> Soy Minero</title>
+ </head>
+ <body>
+   <h1>hello, world</h1>
+   <p>Call me Ishmael.</p>
+</body>
+</html>
